--- a/index.html
+++ b/index.html
@@ -7,35 +7,41 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="width: 100%; font-family: Arial, Helvetica, sans-serif;">
-        <header style="background-color: #990033; color: #ffffff; text-align: center; padding: 25px;">
+    <div style="width: 100%; min-width: 534px; font-family: Arial, Helvetica, sans-serif;">
+        <header style="text-align: center; padding: 15px;">
             <h1><strong>COURSE NAME</strong></h1>
             <h2>Professor X | Semester YR | Session X</h2>
-            <nav>
-                <ul style="list-style:none; color: #000;">
-                    <li style="display: inline-block; width: 160px; background-color: #ffffff; padding: 15px; margin: 5px;"><strong>SLACK</strong><img src="slack.png" alt="slack icon in black on transparent" width="24px" style="margin-left:10px;"></li>
-                    <li style="display: inline-block; width: 160px; background-color: #ffffff; padding: 15px; margin: 5px;"><strong>INSTRUCTOR</strong><img src="email.png" alt="email icon in black on transparent" width="24px" style="margin-left:10px;"></li>
-                    <li style="display: inline-block; width: 160px; background-color: #ffffff; padding: 15px; margin: 5px;"><strong>HELP</strong><img src="help.png" alt="question mark icon in black on transparent" width="24px" style="margin-left:10px;"></li>
-                </ul>
-            </nav>
         </header>
-        <section style="width: 350px; margin-top: 25px; float: left; margin-right: 50px;">
-            <h2>TIPS</h2>
-            <ol style="list-style-type: none; font-size: 20px; line-height: 1.25em;">
-                <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="No1.png" alt="Number 1 in white on black circle background"><strong>Trust the content&mdash;</strong><br />everything you need is here in Canvas</li>
-                <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="No2.png" alt="Number 2 in white on black circle background"><strong>Reach out for help&mdash;</strong><br />from your peers and your instructor</li>
-                <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="No3.png" alt="Number 3 in white on black circle background"><strong>Follow milestones&mdash;</strong><br />no late penalties, but don't get behind</li>
-            </ol>
-        </section>
-        <section style="margin-top: 25px; float: left;">
-            <div style="float: left; margin-right: 25px;"><a style="width: 125px; background-color: #990033; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 00</strong></a>
-                <h2>Let's Get Started</h2>
-                <p>Description of this module</p>
+        <nav style="background-color: #990033; border: 10px solid #990033;">
+            <ul style="display: flex; justify-content: center; flex-wrap: wrap; list-style:none; color: #000;">
+                <li><a href="#" style="text-align: center; width: 160px; background-color: #ffffff; padding: 15px; margin: 10px; text-decoration: none; color: #000;"><strong>SLACK</strong><img src="https://ccarra1.github.io/canvas/slack.png" alt="slack icon in black on transparent" width="24px" style="margin-left:10px;"></a></li>
+                <li><a href="#" style="text-align: center; width: 160px; background-color: #ffffff; padding: 15px; margin: 10px; text-decoration: none; color: #000;"><strong>INSTRUCTOR</strong><img src="https://ccarra1.github.io/canvas/email.png" alt="email icon in black on transparent" width="24px" style="margin-left:10px;"></a></li>
+                <li><a href="#" style="text-align: center; width: 160px; background-color: #ffffff; padding: 15px; margin: 10px;  text-decoration: none; color: #000;"><strong>HELP</strong><img src="https://ccarra1.github.io/canvas/help.png" alt="question mark icon in black on transparent" width="24px" style="margin-left:10px;"></a></li>
+            </ul>
+            <div style="clear:left;"></div>
+        </nav>
+        <section>
+            <h2 style="text-align: center;">START HERE</h2>
+            <div style="display: flex; justify-content: center; flex-wrap: wrap;">
+                <section style="width: 350px; margin-top: 50px; float: left; margin-right: 50px;">
+                    <h3>TIPS</h3>
+                    <ol style="list-style-type: none; font-size: 20px; line-height: 1.25em;">
+                        <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="https://ccarra1.github.io/canvas/No1.png" alt="Number 1 in white on black circle background"><strong>Trust the content&mdash;</strong><br />everything you need is here in Canvas</li>
+                        <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="https://ccarra1.github.io/canvas/No2.png" alt="Number 2 in white on black circle background"><strong>Reach out for help&mdash;</strong><br />from your peers and your instructor</li>
+                        <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="https://ccarra1.github.io/canvas/No3.png" alt="Number 3 in white on black circle background"><strong>Follow milestones&mdash;</strong><br />no late penalties, but don't get behind</li>
+                    </ol>
+                </section>
+                <section style="margin-top: 50px; float: left;">
+                    <div style="float: left; margin-right: 25px;"><a style="width: 125px; background-color: #990033; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 00</strong></a>
+                        <h3>Let's Get Started</h3>
+                        <p>Description of this module</p>
+                    </div>
+                    <div style="float: left;"><img style="margin-top: 10px;" src="https://via.placeholder.com/300x200.png" alt="" /></div>
+                </section>
             </div>
-            <div style="float: left;"><img style="margin-top: 10px;" src="https://via.placeholder.com/300x200.png" alt="" /></div>
         </section>
         <section style="clear: left; background-color: #ff0; padding: 5px; text-align: center;"><strong>EVERYTHING DUE BY XX/XX/XX</strong></section>
-        <section style="background-color: #eee;">
+        <section style="margin-top: 75px;">
             <h2 style="text-align: center;">MODULES</h2>
             <section style="width: 250px; float: left; margin-left: 15px;"><a style="width: 125px; background-color: #990033; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 01</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
                 <h3>MODULE NAME</h3>
