--- a/135.html
+++ b/135.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GIT 135</title>
     <!--
         ASU Maroon- #8C1D40
         ASU Gold- #FFC627
@@ -28,8 +28,8 @@
 <body>
     <div style="width: 100%; min-width: 534px; max-width: 1280px; font-family: Arial, Helvetica, sans-serif;">
         <header style="text-align: center; padding: 15px;">
-            <h1><strong>Course Name</strong></h1>
-            <h2>PROFESSOR X | SEMESTER YR | SESSION X</h2>
+            <h1><strong>GIT 135: Graphic Communications</strong></h1>
+            <h2>PROFESSOR CRITES | SPRING 2023 | SESSION A</h2>
         </header>
         <nav style="background-color: #8C1D40; border: 10px solid #8C1D40;">
             <ul style="display: flex; justify-content: center; flex-wrap: wrap; list-style:none; color: #000;">
@@ -54,7 +54,7 @@
                 <section style="margin-top: 50px; float: left;">
                     <div style="float: left; margin-right: 25px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 00</strong></a>
                         <h3>Let's Get Started</h3>
-                        <p style="line-height: 1.5; width: 350px;">Description of this module</p>
+                        <p style="line-height: 1.5; width: 350px;">In this module, you will introduced to your instructor, Canvas, Slack, and the textbook. You'll also take you first quiz and set up a shared folder to save all your assignments. </p>
                     </div>
                     <div style="float: left;"><img style="margin-top: 10px;" src="https://via.placeholder.com/300x200.png" alt="" /></div>
                 </section>
@@ -64,35 +64,35 @@
             <h2 style="text-align: center; margin-bottom: 75px;">MODULES</h2>
             <div style="display: flex; justify-content: center; flex-wrap:wrap;">
                 <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 01</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>MODULE NAME</h3>
+                    <h3>INTRODUCTION</h3>
                     <p>Description of this module</p>
                 </section>
                 <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 02</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>MODULE NAME</h3>
+                    <h3>TYPOGRAPHY, VISUALIZATIONS, ICONS & COLOR</h3>
                     <p>Description of this module</p>
                 </section>
                 <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 03</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>MODULE NAME</h3>
+                    <h3>DESIGN PROCESS</h3>
                     <p>Description of this module</p>
                 </section>
                 <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 04</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>MODULE NAME</h3>
+                    <h3>COMPOSITION</h3>
                     <p>Description of this module</p>
                 </section>
                 <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 05</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>MODULE NAME</h3>
+                    <h3>POSTERS & BOOK COVERS</h3>
                     <p>Description of this module</p>
                 </section>
                 <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 06</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>MODULE NAME</h3>
+                    <h3>BRANDING & VISUAL IDENTITY</h3>
                     <p>Description of this module</p>
                 </section>
                 <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 07</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>MODULE NAME</h3>
+                    <h3>ADVERTISING & PACKAGING</h3>
                     <p>Description of this module</p>
                 </section>
                 <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 08</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>MODULE NAME</h3>
+                    <h3>PORTFOLIO & JOB SEARCH</h3>
                     <p>Description of this module</p>
                 </section>
             </div>
