--- a/135.html
+++ b/135.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIT 135</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!--
         ASU Maroon- #8C1D40
         ASU Gold- #FFC627
@@ -26,78 +27,40 @@
     -->
 </head>
 <body>
-    <div style="width: 100%; min-width: 534px; max-width: 1280px; font-family: Arial, Helvetica, sans-serif;">
+    <div style="width: 100%; min-width: 534px; max-width: 800px; font-family: Roboto, Arial, Helvetica, sans-serif;">
         <header style="text-align: center; padding: 15px;">
-            <h1><strong>GIT 135: Graphic Communications</strong></h1>
-            <h2>PROFESSOR CRITES | SPRING 2023 | SESSION A</h2>
+            <h2 style="font-size: 1.5em; text-align: left;">PROFESSOR X | TERM YEAR | SESSION X</h2>
         </header>
-        <nav style="background-color: #8C1D40; border: 10px solid #8C1D40;">
-            <ul style="display: flex; justify-content: center; flex-wrap: wrap; list-style:none; color: #000;">
-                <li><a href="#" style="text-align: center; width: 160px; background-color: #ffffff; padding: 15px; margin: 10px; text-decoration: none; color: #000;"><strong>SLACK</strong><img src="https://ccarra1.github.io/canvas/slack.png" alt="slack icon in black on transparent" width="24px" style="margin-left:10px;"></a></li>
-                <li><a href="#" style="text-align: center; width: 160px; background-color: #ffffff; padding: 15px; margin: 10px; text-decoration: none; color: #000;"><strong>INSTRUCTOR</strong><img src="https://ccarra1.github.io/canvas/email.png" alt="email icon in black on transparent" width="24px" style="margin-left:10px;"></a></li>
-                <li><a href="#" style="text-align: center; width: 160px; background-color: #ffffff; padding: 15px; margin: 10px; text-decoration: none; color: #000;"><strong>HELP</strong><img src="https://ccarra1.github.io/canvas/help.png" alt="question mark icon in black on transparent" width="24px" style="margin-left:10px;"></a></li>
+        <section style="background-color: #8c1d40;">
+            <ul style="list-style: none;">
+                <li style="float: left;"><a style="text-align: center; border: 2px solid #8c1d40; background-color: #ffffff; padding: 15px; margin-right: 10px; text-decoration: none; color: #000;" href="#"><strong>SLACK</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/slack.png" alt="slack icon in black on transparent" width="24px" /></a></li>
+                <li style="float: left;"><a style="text-align: center; border: 2px solid #8c1d40; background-color: #ffffff; padding: 15px; margin-right: 10px; text-decoration: none; color: #000;" href="#"><strong>INSTRUCTOR</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/email.png" alt="email icon in black on transparent" width="24px" /></a></li>
+                <li style="float: left;"><a style="text-align: center; border: 2px solid #8c1d40; background-color: #ffffff; padding: 15px; text-decoration: none; color: #000;" href="#"><strong>HELP</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/help.png" alt="question mark icon in black on transparent" width="24px" /></a></li>
             </ul>
-            <div style="clear:left;"></div>
-        </nav>
-        <section>
-            <h2 style="text-align: center;">START HERE</h2>
-            <div style="display: flex; justify-content: center; flex-wrap: wrap;">
-                <section style="padding: 25px; background-color: #E8E8E8; margin-top: 50px; float: left; margin-right: 50px;">
-                    <h3>TIPS FOR SUCCESS</h3>
-                    <ol style="list-style-type: none; font-size: 20px; line-height: 1.25em;">
-                        <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="https://ccarra1.github.io/canvas/No1.png" alt="Number 1 in white on black circle background"><strong>Trust the content&mdash;</strong><br />everything you need is here in Canvas</li>
-                        <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="https://ccarra1.github.io/canvas/No2.png" alt="Number 2 in white on black circle background"><strong>Reach out for help&mdash;</strong><br />from your peers and your instructor</li>
-                        <li style="margin-bottom: 25px;"><img width="40px" style="margin-right:10px;" src="https://ccarra1.github.io/canvas/No3.png" alt="Number 3 in white on black circle background"><strong>Follow milestones&mdash;</strong><br />no late penalties, but don't get behind</li>
+        </section>
+        <section style="clear: both; background-color: #8c1d40;">
+            <h2 style="visibility: hidden;">START HERE</h2>
+            <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 25px; padding-bottom: 50px;">
+                <section style="padding: 10px; background-color: #e8e8e8;">
+                    <h3 style="font-size: 1.25em;"><strong>TIPS FOR SUCCESS</strong></h3>
+                    <ol style="list-style-type: none; line-height: 1.25em;">
+                        <li style="margin-bottom: 25px;"><img style="margin-right: 10px;" src="https://ccarra1.github.io/canvas/No1.png" alt="Number 1 in white on black circle background" width="40px" /><strong>Trust the content&mdash;</strong><br />everything you need is here in Canvas</li>
+                        <li style="margin-bottom: 25px;"><img style="margin-right: 10px;" src="https://ccarra1.github.io/canvas/No2.png" alt="Number 2 in white on black circle background" width="40px" /><strong>Reach out for help&mdash;</strong><br />from your peers and your instructor</li>
+                        <li style="margin-bottom: 25px;"><img style="margin-right: 10px;" src="https://ccarra1.github.io/canvas/No3.png" alt="Number 3 in white on black circle background" width="40px" /><strong>Follow milestones&mdash;</strong><br />no late penalties, but don't get behind</li>
                     </ol>
-                    <section style="clear: left; background-color: #ff0; padding: 5px; text-align: center;"><strong>EVERYTHING DUE BY XX/XX/XX</strong></section>
+                    <section style="clear: left; background-color: #ffc627; padding: 5px; text-align: center;"><strong>EVERYTHING DUE BY XX/XX/XX</strong></section>
                 </section>
-                <section style="margin-top: 50px; float: left;">
-                    <div style="float: left; margin-right: 25px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 00</strong></a>
-                        <h3>Let's Get Started</h3>
-                        <p style="line-height: 1.5; width: 350px;">In this module, you will introduced to your instructor, Canvas, Slack, and the textbook. You'll also take you first quiz and set up a shared folder to save all your assignments. </p>
+                <section><a style="width: 125px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 00: Let's Get Started!" href="https://canvas.asu.edu/courses/54122/modules/595774" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595774" data-api-returntype="Module"><strong>MODULE 00</strong></a>
+                    <h3 style="font-size: 1.5em;"><span style="color: #ffffff;"><strong>Let's Get Started</strong></span></h3>
+                    <p style="line-height: 1.5; width: 350px;"><span style="color: #ffffff;">In Module 00, you will introduced to your instructor, Canvas, Slack, and the textbook. You'll also take you first quiz and set up a shared folder to save all your assignments.</span></p>
+                    <div style="margin-top: 25px; padding-bottom: 25px; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr;">
+                        <h3 style="font-size: 1.25em; color: #ffffff; grid-column: 1/5;"><strong>SHORTCUT TO MODULES</strong></h3>
+                        <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 01: Introduction" href="https://canvas.asu.edu/courses/54122/modules/595775" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595775" data-api-returntype="Module"><strong>01</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 02: Typography, Visualizations, Icons, Color" href="https://canvas.asu.edu/courses/54122/modules/595777" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595777" data-api-returntype="Module"><strong>02</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 03: The Design Process" href="https://canvas.asu.edu/courses/54122/modules/595778" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595778" data-api-returntype="Module"><strong>03</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 04: Composition" href="https://canvas.asu.edu/courses/54122/modules/595781" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595781" data-api-returntype="Module"><strong>04</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 05: Posters &amp; Book Covers" href="https://canvas.asu.edu/courses/54122/modules/598163" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/598163" data-api-returntype="Module"><strong>05</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 06: Branding and Visual Identity" href="https://canvas.asu.edu/courses/54122/modules/598176" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/598176" data-api-returntype="Module"><strong>06</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 07: Advertising &amp; Packaging" href="https://canvas.asu.edu/courses/54122/modules/598177" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/598177" data-api-returntype="Module"><strong>07</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 08: The Portfolio and Job Search" href="https://canvas.asu.edu/courses/54122/modules/598180" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/598180" data-api-returntype="Module"><strong>08</strong></a>
                     </div>
-                    <div style="float: left;"><img style="margin-top: 10px;" src="https://via.placeholder.com/300x200.png" alt="" /></div>
                 </section>
             </div>
         </section>
-        <section style="margin-top: 75px;">
-            <h2 style="text-align: center; margin-bottom: 75px;">MODULES</h2>
-            <div style="display: flex; justify-content: center; flex-wrap:wrap;">
-                <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 01</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>INTRODUCTION</h3>
-                    <p>Description of this module</p>
-                </section>
-                <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 02</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>TYPOGRAPHY, VISUALIZATIONS, ICONS & COLOR</h3>
-                    <p>Description of this module</p>
-                </section>
-                <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 03</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>DESIGN PROCESS</h3>
-                    <p>Description of this module</p>
-                </section>
-                <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 04</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>COMPOSITION</h3>
-                    <p>Description of this module</p>
-                </section>
-                <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 05</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>POSTERS & BOOK COVERS</h3>
-                    <p>Description of this module</p>
-                </section>
-                <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 06</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>BRANDING & VISUAL IDENTITY</h3>
-                    <p>Description of this module</p>
-                </section>
-                <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 07</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>ADVERTISING & PACKAGING</h3>
-                    <p>Description of this module</p>
-                </section>
-                <section style="width: 250px; float: left; margin-left: 50px;"><a style="width: 125px; background-color: #8C1D40; color: #ffffff; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" href="#"><strong>MODULE 08</strong></a> <img style="display: block; margin-top: 10px;" src="https://via.placeholder.com/250x200.png" alt="" />
-                    <h3>PORTFOLIO & JOB SEARCH</h3>
-                    <p>Description of this module</p>
-                </section>
-            </div>
-            <p style="clear: both; text-align: center; padding: 20px;"><em>You got this! Do your best!</em></p>
-        </section>
+        <p style="background-color: #ffc627; margin: 0; text-align: center; padding: 20px;"><em>You got this! Do your best!</em></p>
     </div>
 </body>
 </html>
