--- a/414.html
+++ b/414.html
@@ -31,14 +31,14 @@
         <header style="text-align: center; padding: 15px;">
             <h2 style="font-size: 1.5em; text-align: left;">PROFESSOR X | TERM YEAR | SESSION X</h2>
         </header>
-        <section style="background-color: #8c1d40;">
+        <section style="background-color: #78BE20;">
             <ul style="list-style: none;">
-                <li style="float: left;"><a style="text-align: center; border: 2px solid #8c1d40; background-color: #ffffff; padding: 15px; margin-right: 10px; text-decoration: none; color: #000;" href="#"><strong>SLACK</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/slack.png" alt="slack icon in black on transparent" width="24px" /></a></li>
-                <li style="float: left;"><a style="text-align: center; border: 2px solid #8c1d40; background-color: #ffffff; padding: 15px; margin-right: 10px; text-decoration: none; color: #000;" href="#"><strong>INSTRUCTOR</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/email.png" alt="email icon in black on transparent" width="24px" /></a></li>
-                <li style="float: left;"><a style="text-align: center; border: 2px solid #8c1d40; background-color: #ffffff; padding: 15px; text-decoration: none; color: #000;" href="#"><strong>HELP</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/help.png" alt="question mark icon in black on transparent" width="24px" /></a></li>
+                <li style="float: left;"><a style="text-align: center; border: 2px solid #78BE20; background-color: #ffffff; padding: 15px; margin-right: 10px; text-decoration: none; color: #000;" href="#"><strong>SLACK</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/slack.png" alt="slack icon in black on transparent" width="24px" /></a></li>
+                <li style="float: left;"><a style="text-align: center; border: 2px solid #78BE20; background-color: #ffffff; padding: 15px; margin-right: 10px; text-decoration: none; color: #000;" href="#"><strong>INSTRUCTOR</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/email.png" alt="email icon in black on transparent" width="24px" /></a></li>
+                <li style="float: left;"><a style="text-align: center; border: 2px solid #78BE20; background-color: #ffffff; padding: 15px; text-decoration: none; color: #000;" href="#"><strong>HELP</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/help.png" alt="question mark icon in black on transparent" width="24px" /></a></li>
             </ul>
         </section>
-        <section style="clear: both; background-color: #8c1d40;">
+        <section style="clear: both; background-color: #78BE20;">
             <h2 style="visibility: hidden;">START HERE</h2>
             <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 25px; padding-bottom: 50px;">
                 <section style="padding: 10px; background-color: #e8e8e8;">
@@ -51,10 +51,10 @@
                     <section style="clear: left; background-color: #ffc627; padding: 5px; text-align: center;"><strong>EVERYTHING DUE BY XX/XX/XX</strong></section>
                 </section>
                 <section><a style="width: 125px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="" href="#"><strong>MODULE 00</strong></a>
-                    <h3 style="font-size: 1.5em;"><span style="color: #ffffff;"><strong>Module Name</strong></span></h3>
-                    <p style="line-height: 1.5; width: 350px;"><span style="color: #ffffff;">In Module X, you will ...</span></p>
+                    <h3 style="font-size: 1.5em;"><span style="color: #000000;"><strong>Module Name</strong></span></h3>
+                    <p style="line-height: 1.5; width: 350px; color: #000000;">In Module X, you will ...</span></p>
                     <div style="margin-top: 25px; padding-bottom: 25px; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr;">
-                        <h3 style="font-size: 1.25em; color: #ffffff; grid-column: 1/5;"><strong>SHORTCUT TO MODULES</strong></h3>
+                        <h3 style="font-size: 1.25em; color: #000000; grid-column: 1/5;"><strong>SHORTCUT TO MODULES</strong></h3>
                         <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="" href="#"><strong>01</strong></a>
                         <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="" href="#"><strong>02</strong></a>
                         <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="" href="#"><strong>03</strong></a>
