on campus updates

--- a/135.html
+++ b/135.html
@@ -27,9 +27,9 @@
     -->
 </head>
 <body>
-    <div style="width: 100%; min-width: 534px; max-width: 800px; font-family: Roboto, Arial, Helvetica, sans-serif;">
+    <div style="min-width: 800px; width: 100%; font-family: Roboto, Arial, Helvetica, sans-serif;">
         <header style="text-align: center; padding: 15px;">
-            <h2 style="font-size: 1.5em; text-align: left;">PROFESSOR X | TERM YEAR | SESSION X</h2>
+            <h2 style="font-size: 1.5em; text-align: left;">PROFESSOR CARRASQUILLA | TERM YEAR | SESSION C</h2>
         </header>
         <section style="background-color: #8c1d40;">
             <ul style="list-style: none;">
@@ -38,29 +38,22 @@
                 <li style="float: left;"><a style="text-align: center; border: 2px solid #8c1d40; background-color: #ffffff; padding: 15px; text-decoration: none; color: #000;" href="#"><strong>HELP</strong><img style="margin-left: 10px;" src="https://ccarra1.github.io/canvas/help.png" alt="question mark icon in black on transparent" width="24px" /></a></li>
             </ul>
         </section>
-        <section style="clear: both; background-color: #8c1d40;">
-            <h2 style="visibility: hidden;">START HERE</h2>
-            <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 25px; padding-bottom: 50px;">
-                <section style="padding: 10px; background-color: #e8e8e8;">
-                    <h3 style="font-size: 1.25em;"><strong>TIPS FOR SUCCESS</strong></h3>
-                    <ol style="list-style-type: none; line-height: 1.25em;">
-                        <li style="margin-bottom: 25px;"><img style="margin-right: 10px;" src="https://ccarra1.github.io/canvas/No1.png" alt="Number 1 in white on black circle background" width="40px" /><strong>Trust the content&mdash;</strong><br />everything you need is here in Canvas</li>
-                        <li style="margin-bottom: 25px;"><img style="margin-right: 10px;" src="https://ccarra1.github.io/canvas/No2.png" alt="Number 2 in white on black circle background" width="40px" /><strong>Reach out for help&mdash;</strong><br />from your peers and your instructor</li>
-                        <li style="margin-bottom: 25px;"><img style="margin-right: 10px;" src="https://ccarra1.github.io/canvas/No3.png" alt="Number 3 in white on black circle background" width="40px" /><strong>Follow milestones&mdash;</strong><br />no late penalties, but don't get behind</li>
-                    </ol>
-                    <section style="clear: left; background-color: #ffc627; padding: 5px; text-align: center;"><strong>EVERYTHING DUE BY XX/XX/XX</strong></section>
-                </section>
-                <section><a style="width: 125px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 00: Let's Get Started!" href="https://canvas.asu.edu/courses/54122/modules/595774" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595774" data-api-returntype="Module"><strong>MODULE 00</strong></a>
-                    <h3 style="font-size: 1.5em;"><span style="color: #ffffff;"><strong>Let's Get Started</strong></span></h3>
-                    <p style="line-height: 1.5; width: 350px;"><span style="color: #ffffff;">In Module 00, you will introduced to your instructor, Canvas, Slack, and the textbook. You'll also take you first quiz and set up a shared folder to save all your assignments.</span></p>
-                    <div style="margin-top: 25px; padding-bottom: 25px; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr;">
-                        <h3 style="font-size: 1.25em; color: #ffffff; grid-column: 1/5;"><strong>SHORTCUT TO MODULES</strong></h3>
-                        <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 01: Introduction" href="https://canvas.asu.edu/courses/54122/modules/595775" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595775" data-api-returntype="Module"><strong>01</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 02: Typography, Visualizations, Icons, Color" href="https://canvas.asu.edu/courses/54122/modules/595777" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595777" data-api-returntype="Module"><strong>02</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 03: The Design Process" href="https://canvas.asu.edu/courses/54122/modules/595778" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595778" data-api-returntype="Module"><strong>03</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 04: Composition" href="https://canvas.asu.edu/courses/54122/modules/595781" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/595781" data-api-returntype="Module"><strong>04</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 05: Posters &amp; Book Covers" href="https://canvas.asu.edu/courses/54122/modules/598163" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/598163" data-api-returntype="Module"><strong>05</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 06: Branding and Visual Identity" href="https://canvas.asu.edu/courses/54122/modules/598176" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/598176" data-api-returntype="Module"><strong>06</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 07: Advertising &amp; Packaging" href="https://canvas.asu.edu/courses/54122/modules/598177" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/598177" data-api-returntype="Module"><strong>07</strong></a> <a style="margin: 10px; width: 25px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="Module 08: The Portfolio and Job Search" href="https://canvas.asu.edu/courses/54122/modules/598180" data-api-endpoint="https://canvas.asu.edu/api/v1/courses/54122/modules/598180" data-api-returntype="Module"><strong>08</strong></a>
-                    </div>
-                </section>
+        <div style="padding-top: 25px; min-width: 800px; width: 100%; overflow: scroll; background-color: #8c1d40; font-family: roboto, arial, sans-serif; display: flex;">
+            <div style="min-width: 300px; margin: 25px; background-color: #ffffff; border-radius: 10px;">
+                <p style="background-color: #222; padding: 10px; line-height: 1.5em; font-size: .8em; color: #fff;"><strong>GIT 135</strong><br />MONDDAY, JANUARY 9<br />9:05 - 9:55 AM</p>
+                <p style="padding: 0px 10px;"><strong>MODULE 00: Getting Started</strong></p>
+                <ol style="padding: 0 0 20px 35px;">
+                    <li>Welcome</li>
+                    <li>Canvas</li>
+                    <li>Course Tour</li>
+                    <li>Slack</li>
+                    <li>Textbook</li>
+                    <li>Quiz</li>
+                    <li>Make a Shared Google Folder</li>
+                </ol>
+                <p style="padding: 0px 10px;"><span style="color: #BFBFBF;"><strong><em>Watch the recording</em></strong></span></p>
             </div>
-        </section>
-        <p style="background-color: #ffc627; margin: 0; text-align: center; padding: 20px;"><em>You got this! Do your best!</em></p>
+        </div>
     </div>
 </body>
 </html>
