--- a/540.html
+++ b/540.html
@@ -51,7 +51,7 @@
                     <section style="clear: left; background-color: #ffc627; padding: 5px; text-align: center;"><strong>EVERYTHING DUE BY XX/XX/XX</strong></section>
                 </section>
                 <section><a style="width: 125px; background-color: #ffffff; color: #000000; padding: 15px; text-decoration: none; display: inline-block; text-align: center;" title="" href="#"><strong>MODULE 00</strong></a>
-                    <h3 style="font-size: 1.5em; color: #000000;"><strong>Module Name</strong></span></h3>
+                    <h3 style="font-size: 1.5em; color: #000000;"><strong>Module Name</strong></h3>
                     <p style="line-height: 1.5; width: 350px; color: #000000;">In Module X, you will ...</span></p>
                     <div style="margin-top: 25px; padding-bottom: 25px; display: grid; grid-template-columns: 1fr 1fr 1fr 1fr;">
                         <h3 style="font-size: 1.25em; color: #000000; grid-column: 1/5;"><strong>SHORTCUT TO MODULES</strong></h3>
